--- a/views/layout.erb
+++ b/views/layout.erb
@@ -95,6 +95,7 @@
 						<ul>
 							<li>Built by the <a href="https://www.gov.uk/government/organisations/government-digital-service">Government Digital Service</a></li>
 							<li><a href="/cookies">Cookies</a></li>
+							<li><a href="/privacy-notice">Privacy notice</a></li>
 						</ul>
 					</nav>
 
