Updated privacy notice with edits from IA team

--- a/views/privacy-notice.erb
+++ b/views/privacy-notice.erb
@@ -102,6 +102,9 @@
 			<p>We design, build and run our systems to make sure that your data is as safe as possible at any stage, both while it’s processed and when it’s stored.</p>
 			<p>All personal data on GOV.UK PaaS is processed, stored and managed entirely in the European Economic Area (EEA), and will not be transferred outside of it. This means that it is covered by EU Data Protection regulations.</p>
 
+			<h2 class="heading-medium">Who do we share your information with</h2>
+			<p>Where appropriate, GDS may also share your personal data with selected partners to help us provide the service or with further consent. When selecting our suppliers and partners, we take into account their data handling processes to ensure that your data is always as secure as possible.</p>
+
 			<h2 class="heading-medium">How we protect your data and keep it secure</h2>
 			<p>We are committed to doing all that we can to keep your data secure. We set up systems and processes to prevent unauthorised access or disclosure of the data we collect about you – for example, we protect your data using varying levels of encryption. All 3rd parties who process personal data for GDS are required to keep that data secure.</p>
 
