Use `<address>` tags for addresses

--- a/views/privacy-notice.erb
+++ b/views/privacy-notice.erb
@@ -137,23 +137,25 @@
 				<li>think that your personal data has been misused or mishandled</li>
 			</ul>
 
-			<p>Data Protection Officer<br />
+			<address>Data Protection Officer<br />
 			<a href="mailto:DPO@cabinetoffice.gov.uk">DPO@cabinetoffice.gov.uk</a><br />
+			<br />
 			Cabinet Office<br />
 			70 Whitehall<br />
 			London<br />
-			SW1A 2AS</p>
+			SW1A 2AS</address>
 
 			<p>You may also make a complaint to the Information Commissioner, who is an independent regulator set up to uphold information rights.</p>
 
-			<p>Information Commissioner's Office<br />
+			<address>Information Commissioner's Office<br />
 			<a href="mailto:casework@ico.org.uk">casework@ico.org.uk</a><br />
 			0303 123 1113<br />
+			<br />
 			Wycliffe House<br />
 			Water Lane<br />
 			Wilmslow<br />
 			Cheshire<br />
-			SK9 5AF</p>
+			SK9 5AF</address>
 		</div>
 	</div>
 </div>
