Change Privacy notice from Title Case to normal case

--- a/views/privacy-notice.erb
+++ b/views/privacy-notice.erb
@@ -10,7 +10,7 @@
 	<div class="grid-row">
 
 		<div class="column-two-thirds">
-			<h1 class="heading-large">Privacy Notice: how we use your data</h1>
+			<h1 class="heading-large">Privacy notice: how we use your data</h1>
 			<p class="summary">Date last modified: 16/05/2018</p>
 
 			<h2 class="heading-medium">Who we are</h2>
