Copy changes to Privacy notice

--- a/views/privacy-notice.erb
+++ b/views/privacy-notice.erb
@@ -28,7 +28,7 @@
 				<li>your organisational role</li>
 				<li>your IP address</li>
 			</ul>
-			<p>We need this information to provide a service that is in the public interest, as the apps we host on GOV.UK PaaS are used by the public to access government services.</p>
+			<p>We need this information to provide a service that is in the public interest, as some of the apps we host on GOV.UK PaaS are used by the public to access government services.</p>
 
 			<h3 class="heading-small">Why we need data from tenants</h3>
 			<p>We use this information to:</p>
@@ -96,7 +96,7 @@
 			<p>In general, this means that we will only hold their personal data for a minimum of 1 day and a maximum of 30 days.</p>
 
 			<h2 class="heading-medium">Children’s privacy protection</h2>
-			<p>Our services are not designed for, or intentionally targeted at, children who are 13 years or younger. We don’t intentionally collect or maintain data about anyone under the age of 13.</p>
+			<p>Our services are not designed for, or intentionally targeted at, children who are 13 years or younger. We do not intentionally collect or maintain data about anyone under the age of 13.</p>
 
 			<h2 class="heading-medium">Where is your data processed and stored</h2>
 			<p>We design, build and run our systems to make sure that your data is as safe as possible at any stage, both while it’s processed and when it’s stored.</p>
@@ -115,8 +115,8 @@
 				<li>a copy of that personal data</li>
 				<li>that anything inaccurate in your personal data is corrected immediately </li>
 				<li>that any incomplete personal data is completed, including by means of a supplementary statement</li>
-				<li>request that your personal data is erased if there is no longer a justification for it – for example if you’re not using GOV.UK PaaS anymore</li>
-				<li>that the processing of your personal data is restricted in certain circumstances – for example, if you don’t think the data is correct</li>
+				<li>request that your personal data is erased if there is no longer a justification for it</li>
+				<li>that the processing of your personal data is restricted in certain circumstances</li>
 			</ul>
 			<p>If you agreed to let us process your data, you have the right to:</p>
 			<ul class="list list-bullet">
@@ -127,7 +127,7 @@
 			<p>If you have any of these requests, get in contact with our Data Protection Officer - the contact details are in the 'Questions and complaints' section at the bottom of the page.</p>
 
 			<h2 class="heading-medium">Changes to this notice</h2>
-			<p>We may change this privacy notice. In that case the ‘last updated’ date at the top of this page will also change. Any changes to this privacy notice will apply to you and your data immediately. We encourage you to periodically review this privacy notice to be informed about how we are protecting your data.</p>
+			<p>We may change this privacy notice. In that case the ‘last updated’ date at the top of this page will also change. Any changes to this privacy notice will apply to you and your data immediately. If these changes affect how your personal data is processed, GDS will take reasonable steps to make sure you know.</p>
 
 			<h2 class="heading-medium">Questions and complaints</h2>
 			<p>The data controller for your personal data is the Cabinet Office.</p>
