--- a/views/privacy-notice.erb
+++ b/views/privacy-notice.erb
@@ -19,7 +19,7 @@
 			<p>GOV.UK PaaS is provided by the Government Digital Service (GDS).</p>
 			<p>The data controller for GDS is the Cabinet Office – a data controller determines how and why personal data is processed. <a href="https://ico.org.uk/ESDWebPages/Entry/Z7414053" data-click-events data-click-category="Content" data-click-action="External link clicked">Read the Cabinet Office’s entry in the Data Protection Public Register</a> for more information.</p>
 
-			<h2 class="heading-medium">What data we need from tenants</h2>
+			<h2 class="heading-medium">What data we collect from tenants</h2>
 			<p>The personal data we collect from you as a tenant will include:</p>
 			<ul class="list list-bullet">
 				<li>your name</li>
@@ -39,7 +39,7 @@
 			</ul>
 
 			<h3 class="heading-small">What we do with tenants’ data</h3>
-			<p>We’ll store the data you provide to:</p>
+			<p>We store the data you provide to:</p>
 			<ul class="list list-bullet">
 				<li>make your user account function correctly</li>
 				<li>manage your user account</li>
@@ -47,8 +47,8 @@
 			</ul>
 			<p>We will not:</p>
 			<ul class="list list-bullet">
-				<li>sell or rent your data to 3rd parties</li>
-				<li>share your data with 3rd parties for marketing purposes</li>
+				<li>sell or rent your data to third parties</li>
+				<li>share your data with third parties for marketing purposes</li>
 			</ul>
 			<p>We will share your data if we are required to do so by law – for example, by court order, or to prevent fraud or other crime.</p>
 
@@ -62,13 +62,13 @@
 			<p>In general, this means that we will only hold your personal data for a minimum of 1 year and a maximum of 2 years.</p>
 			<p>We will delete your personal data when you ask us to remove your user account. It might take up to 35 days for your data to be completely cleared from our logs and back-ups.</p>
 
-			<h2 class="heading-medium">What data we need from end users</h2>
+			<h2 class="heading-medium">What data we collect from end users</h2>
 			<p>The personal data we collect from end users will include:</p>
 			<ul class="list list-bullet">
 				<li>their IP address</li>
 				<li>any cookies that are set by your service</li>
 			</ul>
-			<p>We need this information to provide a service that is in the public interest, as the apps we host on GOV.UK PaaS are used by the public to access government services. </p>
+			<p>We need this information to provide a service that is in the public interest, as some of the apps we host on GOV.UK PaaS are used by the public to access government services. </p>
 
 			<h3 class="heading-small">Why we need your end users’ data</h3>
 			<p>We need this information to make sure the platform can meet the demand created by end users who access the services hosted on it.</p>
@@ -82,8 +82,8 @@
 			</ul>
 			<p>We will not:</p>
 			<ul class="list list-bullet">
-				<li>sell or rent your end users’ data to 3rd parties</li>
-				<li>share your end users’ data with 3rd parties for marketing purposes </li>
+				<li>sell or rent your end users’ data to third parties</li>
+				<li>share your end users’ data with third parties for marketing purposes </li>
 			</ul>
 			<p>We will share your end users’ data if we are required to do so by law – for example, by court order, or to prevent fraud or other crime.</p>
 
@@ -98,40 +98,34 @@
 			<h2 class="heading-medium">Children’s privacy protection</h2>
 			<p>Our services are not designed for, or intentionally targeted at, children who are 13 years or younger. We do not intentionally collect or maintain data about anyone under the age of 13.</p>
 
-			<h2 class="heading-medium">Where is your data processed and stored</h2>
+			<h2 class="heading-medium">Where your data is processed and stored</h2>
 			<p>We design, build and run our systems to make sure that your data is as safe as possible at any stage, both while it’s processed and when it’s stored.</p>
 			<p>All personal data on GOV.UK PaaS is processed, stored and managed entirely in the European Economic Area (EEA), and will not be transferred outside of it. This means that it is covered by EU Data Protection regulations.</p>
 
-			<h2 class="heading-medium">Who do we share your information with</h2>
-			<p>Where appropriate, GDS may also share your personal data with selected partners to help us provide the service or with further consent. When selecting our suppliers and partners, we take into account their data handling processes to ensure that your data is always as secure as possible.</p>
-
 			<h2 class="heading-medium">How we protect your data and keep it secure</h2>
-			<p>We are committed to doing all that we can to keep your data secure. We set up systems and processes to prevent unauthorised access or disclosure of the data we collect about you – for example, we protect your data using varying levels of encryption. All 3rd parties who process personal data for GDS are required to keep that data secure.</p>
+			<p>We are committed to doing all that we can to keep your data secure. We set up systems and processes to prevent unauthorised access or disclosure of the data we collect about you – for example, we protect your data using varying levels of encryption. All third parties who process personal data for GDS are required to keep that data secure.</p>
 
 			<h2 class="heading-medium">What are your rights</h2>
 			<p>You have the right to request:</p>
 			<ul class="list list-bullet">
 				<li>information about how your personal data is processed</li>
-				<li>a copy of that personal data</li>
+				<li>a copy of that personal data - this copy will be provided in a structured, commonly used and machine-readable format</li>
 				<li>that anything inaccurate in your personal data is corrected immediately </li>
-				<li>that any incomplete personal data is completed, including by means of a supplementary statement</li>
-				<li>request that your personal data is erased if there is no longer a justification for it</li>
-				<li>that the processing of your personal data is restricted in certain circumstances</li>
 			</ul>
-			<p>If you agreed to let us process your data, you have the right to:</p>
+			<p>You can also:</p>
 			<ul class="list list-bullet">
-				<li>withdraw your consent at any time</li>
-				<li>request a copy of any personal data you have provided - this copy will be provided in a structured, commonly used and machine-readable format</li>
+				<li>raise an objection about how your personal data is processed</li>
+				<li>request that your personal data is erased if there is no longer a justification for it</li>
+				<li>ask that the processing of your personal data is restricted in certain circumstances</li>
 			</ul>
 
-			<p>If you have any of these requests, get in contact with our Data Protection Officer - the contact details are in the 'Questions and complaints' section at the bottom of the page.</p>
+			<p>If you have any of these requests, get in contact with our Data Protection Officer - you can find their contact details below.</p>
 
 			<h2 class="heading-medium">Changes to this notice</h2>
 			<p>We may change this privacy notice. In that case the ‘last updated’ date at the top of this page will also change. Any changes to this privacy notice will apply to you and your data immediately. If these changes affect how your personal data is processed, GDS will take reasonable steps to make sure you know.</p>
 
 			<h2 class="heading-medium">Questions and complaints</h2>
-			<p>The data controller for your personal data is the Cabinet Office.</p>
-			<p>Contact the Data Protection Officer if you either:</p>
+			<p>Contact the Data Protection Officer (DPO) if you either:</p>
 			<ul class="list list-bullet">
 				<li>have any questions about anything in this document</li>
 				<li>think that your personal data has been misused or mishandled</li>
