--- a/views/partials/_subnav.erb
+++ b/views/partials/_subnav.erb
@@ -9,6 +9,9 @@
 		<li class="sub-navigation__item <%= active == 'pricing' ? 'sub-navigation__item--active' : '' %>" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
 			<a href="/pricing" itemprop="item"><span itemprop="name">Pricing</span></a>
 		</li>
+		<li class="sub-navigation__item <%= active == 'support-and-response-times' ? 'sub-navigation__item--active' : '' %>" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+			<a href="/support-and-response-times" itemprop="item"><span itemprop="name">Support and response times</span></a>
+		</li>
 		<li class="sub-navigation__item <%= active == 'ia' ? 'sub-navigation__item--active' : '' %>" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
 			<a href="/ia" itemprop="item"><span itemprop="name">Information assurance</span></a>
 		</li>
