Disable anchor link in same page
The site has some kind of weird behaviour (some javascript?) with
anchors. When referring an anchor, it gets stripped from the url.

But with the anchor is in the same page, the client gets redirected
to the previous page (???).

I do not want to block the change so I disable the link for the time
being.

--- a/views/support-and-response-times.erb
+++ b/views/support-and-response-times.erb
@@ -21,7 +21,7 @@
 			You can email us for support at <a href="mailto:gov-uk-paas-support@digital.cabinet-office.gov.uk">gov-uk-paas-support@digital.cabinet-office.gov.uk</a>.
 			</p>
 			<p>
-			From Monday to Friday, between 9 and 5 and excluding bank holidays (‘in hours’ support), our <a href="#response_times">response times</a> range from 20 minutes to 1 business day depending on:
+			From Monday to Friday, between 9 and 5 and excluding bank holidays (‘in hours’ support), our response times (see below) range from 20 minutes to 1 business day depending on:
 			</p>
 			<ul class="list list-bullet">
 				<li>the nature of the request - we prioritise issues over queries</li>
