Reword one sentence and link to support page

--- a/views/support-and-response-times.erb
+++ b/views/support-and-response-times.erb
@@ -34,7 +34,7 @@
 			Between 5pm and 9am on Monday to Friday, at weekends and during bank holidays (‘out of hours’ support) we provide emergency support for critical incidents affecting live production services.
 			</p>
 			<p>
-			Tenants with services in production can also contact us to escalate a critical issue out of working hours.
+			Tenants with services in production can contact us to <a href="/support">notify and escalate about a critical issue out of working hours</a>.
 			</p>
 
 			<h2 class="heading-large"><a name="response_times">Response and resolution times for services in production</a></h2>
