Update privacy notice copy
This commit updates the copy for the privacy notice to the latest agreed
version.

--- a/views/privacy-notice.erb
+++ b/views/privacy-notice.erb
@@ -11,9 +11,8 @@
 
 		<div class="column-two-thirds">
 			<h1 class="heading-large">Privacy notice: how we use your data</h1>
-			<p class="summary">Date last modified: 16/05/2018</p>
+			<p class="summary">Last update: 25 May 2018</p>
 
-			<h2 class="heading-medium">Who we are</h2>
 			<p>GOV.UK Platform as a Service (PaaS) is a cloud hosting platform for government <a href="https://www.gov.uk/government/organisations" data-click-events data-click-category="Content" data-click-action="External link clicked">departments, agencies and crown bodies</a>. Our users (‘tenants’) access the platform to deploy and run their services in the cloud. These services are then used by the general public (‘end users’). In order to make GOV.UK PaaS secure and available we need to collect, process and store personal data both from tenants and end users.
 			   The data we collect from tenants is different from the data we collect from end users, so this document lists them separately.</p>
 			<p>GOV.UK PaaS is provided by the Government Digital Service (GDS).</p>
@@ -95,9 +94,6 @@
 			</ul>
 			<p>In general, this means that we will only hold their personal data for a minimum of 1 day and a maximum of 30 days.</p>
 
-			<h2 class="heading-medium">Children’s privacy protection</h2>
-			<p>Our services are not designed for, or intentionally targeted at, children who are 13 years or younger. We do not intentionally collect or maintain data about anyone under the age of 13.</p>
-
 			<h2 class="heading-medium">Where your data is processed and stored</h2>
 			<p>We design, build and run our systems to make sure that your data is as safe as possible at any stage, both while it’s processed and when it’s stored.</p>
 			<p>All personal data on GOV.UK PaaS is processed, stored and managed entirely in the European Economic Area (EEA), and will not be transferred outside of it. This means that it is covered by EU Data Protection regulations.</p>
@@ -105,18 +101,21 @@
 			<h2 class="heading-medium">How we protect your data and keep it secure</h2>
 			<p>We are committed to doing all that we can to keep your data secure. We set up systems and processes to prevent unauthorised access or disclosure of the data we collect about you – for example, we protect your data using varying levels of encryption. All third parties who process personal data for GDS are required to keep that data secure.</p>
 
-			<h2 class="heading-medium">What are your rights</h2>
+            <h2 class="heading-medium">Children’s privacy protection</h2>
+			<p>Our services are not designed for, or intentionally targeted at, children who are 13 years or younger. We do not intentionally collect or maintain data about anyone under the age of 13.</p>
+
+			<h2 class="heading-medium">Your rights</h2>
 			<p>You have the right to request:</p>
 			<ul class="list list-bullet">
 				<li>information about how your personal data is processed</li>
-				<li>a copy of that personal data - this copy will be provided in a structured, commonly used and machine-readable format</li>
+				<li>a <a href="https://ico.org.uk/your-data-matters/your-right-of-access/" data-click-events data-click-category="Content" data-click-action="External link clicked">copy of that personal data</a> - this copy will be provided in a structured, commonly used and machine-readable format</li>
 				<li>that anything inaccurate in your personal data is corrected immediately </li>
 			</ul>
 			<p>You can also:</p>
 			<ul class="list list-bullet">
 				<li>raise an objection about how your personal data is processed</li>
 				<li>request that your personal data is erased if there is no longer a justification for it</li>
-				<li>ask that the processing of your personal data is restricted in certain circumstances</li>
+				<li>ask that <a href="https://ico.org.uk/your-data-matters/your-right-to-limit-how-organisations-use-your-data/" data-click-events data-click-category="Content" data-click-action="External link clicked">we only process your personal data in certain circumstances</a></li>
 			</ul>
 
 			<p>If you have any of these requests, get in contact with our Data Protection Officer - you can find their contact details below.</p>
@@ -129,6 +128,7 @@
 			<ul class="list list-bullet">
 				<li>have any questions about anything in this document</li>
 				<li>think that your personal data has been misused or mishandled</li>
+				<li>want to <a href="https://ico.org.uk/your-data-matters/your-right-of-access/" data-click-events data-click-category="Content" data-click-action="External link clicked">make a subject access request</a> (SARS)</li>
 			</ul>
 
 			<address>Data Protection Officer<br />
