--- a/views/support/help-using-paas.erb
+++ b/views/support/help-using-paas.erb
@@ -9,8 +9,8 @@
 <div class="container">
 	<div class="grid-row">
 		<div class="column-two-thirds">
-			<h1 class="heading-xlarge">Get support</h1>
-
+			<h1 class="heading-xlarge">help</h1>
+            <!--
 			<form action="/support" method="post">
 				<fieldset>
 					<legend>
@@ -31,7 +31,9 @@
 					</div>
 				</fieldset>
 					<button id="submit" class="button" type="submit">Continue</button>
-			</form>
+					</form>
+			-->
 		</div>
 	</div>
 </div>
+
