--- a/views/support/something-wrong-with-service.erb
+++ b/views/support/something-wrong-with-service.erb
@@ -9,7 +9,12 @@
 <div class="container">
 	<div class="grid-row">
 		<div class="column-two-thirds">
-			<h1 class="heading-xlarge">Something’s wrong with my live service</h1>
+			<h1 class="heading-large">Something’s wrong with my live service</h1>
+
+
+        <div class="panel panel-border-wide">
+          <p>If you have a critical issue, start by checking the <a href="https://status.cloud.service.gov.uk/">system status page</a>: if it’s a known issue with the platform, it will show there and we’ll keep our users updated on the progression of the incident.</p>
+        </div>
             <!--
 			<form action="/support" method="post">
 				<fieldset>
