--- a/views/forms/support.erb
+++ b/views/forms/support.erb
@@ -16,6 +16,7 @@
 					erb :"partials/_radio", :locals => {
 						name: :support_form,
 						label: 'How can we help you?',
+						label_class: 'form-label-large',
 						value: nil,
 						error: @errors[:support_form],
 						hint: nil,
