Fix bug in radio button template
Signed-off-by: Caroline Green <caroline.green@digital.cabinet-office.gov.uk>

--- a/views/partials/_radio.erb
+++ b/views/partials/_radio.erb
@@ -1,4 +1,4 @@
-<div class="form-group form-group--<% name %> <%= error ? 'form-group-error' : '' %>">
+<div class="form-group form-group--<%= name %> <%= error ? 'form-group-error' : '' %>">
 	<fieldset>
 		<legend>
 			<span class="form-label-bold"><%= label %></span>
