Add bulletpoint to why we store data
We'd like to let our users know, that their data may also be stored for
ease of getting back in touch.

--- a/views/privacy-notice.erb
+++ b/views/privacy-notice.erb
@@ -39,6 +39,7 @@
 			<h3 class="heading-small">What we do with tenants’ data</h3>
 			<p>We store the data you provide to:</p>
 			<ul class="list list-bullet">
+				<li>get in contact to reply to your queries</li>
 				<li>make your user account function correctly</li>
 				<li>manage your user account</li>
 				<li>send you updates and notices </li>
