--- a/views/forms/support.erb
+++ b/views/forms/support.erb
@@ -22,7 +22,7 @@
 						hint: nil,
 						options: [
 							{label: 'Something’s wrong with my live service', value: 'something-wrong-with-service'},
-							{label: 'I need some help using GOV.UK', value: 'help-using-paas'},
+							{label: 'I need some help using GOV.UK PaaS', value: 'help-using-paas'},
 							{label: 'I’d like to find out more about GOV.UK PaaS', value: 'find-out-more'},
 						],
 					}
