Q1 2018 Pricing page changes [157994968]
- pricing pages copy
- removal of "trial account" as a term
- linkify things that should have links
- top level navigation changes to include pricing
- fixed whitespace in roadmap

solo @tlwr

--- a/views/get-started.erb
+++ b/views/get-started.erb
@@ -34,7 +34,7 @@
 				Make sure we currently support the <a href="https://docs.cloud.service.gov.uk/#paas-requirements">language, framework</a> and <a href="/features">backing services</a> you need. Our <a href="/roadmap">roadmap</a> lists the features planned for release in the coming months.
 			</p>
 
-			<h3 class="heading-medium">Request a trial account</h3>
+			<h3 class="heading-medium">Request an account</h3>
 			<p>
 				When you <a href="/signup">request an account</a> you can invite as many team members as you need and choose the ones who’ll be in charge of managing users. They’ll be able to request more user accounts, including ones for external suppliers, and assign <a href="https://docs.cloud.service.gov.uk/#user-roles">roles and permissions</a>.
 			</p>
@@ -56,7 +56,7 @@
 				Finance colleagues will help setting up billing arrangements.
 			</p>
 
-			<a class="button" href="/signup">Request a trial account</a>
+			<a class="button" href="/signup">Request an account</a>
 		</div>
 	</div>
 </div>
