--- a/views/layout.erb
+++ b/views/layout.erb
@@ -47,9 +47,9 @@
 			<nav id="navigation" class="header__navigation" aria-label="Top Level Navigation" aria-hidden="true">
 				<ul>
 					<% {
-						'About' => '/',
 						'Get started' => '/get-started',
 						'Features' => '/features',
+						'Pricing' => '/pricing',
 						'Documentation' => 'https://docs.cloud.service.gov.uk',
 						'Support' => '/support'
 					}.each do |title, url| %>
