--- a/views/pricing.erb
+++ b/views/pricing.erb
@@ -3,25 +3,101 @@
 <% end %>
 
 <% content_for :breadcrumb do %>
-	<%== erb :'partials/_breadcrumb', :locals => {name: 'Features, roadmap and security', href: request.path_info, active: true} %>
+	<%== erb :'partials/_breadcrumb', :locals => {name: 'Pricing', href: request.path_info, active: true} %>
 <% end %>
 
 <div class="container">
 	<div class="grid-row">
 		<div class="column-one-third">
-			<%== erb :'partials/_subnav', :locals => {active: 'pricing'} %>
+			<nav class="sub-navigation">
+				<ol itemscope itemtype="http://schema.org/ItemList">
+					<li class="sub-navigation__item sub-navigation__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+						<a href="/pricing" itemprop="item"><span itemprop="name">Pricing</span></a>
+					</li>
+					<li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+						<a href="https://admin.cloud.service.gov.uk/calculator" itemprop="item"><span itemprop="name">Calculate the costs</span></a>
+					</li>
+				</ol>
+			</nav>
 		</div>
-
 
 		<div class="column-two-thirds">
 			<h1 class="heading-xlarge">Pricing</h1>
+
+			<h2 class="heading-medium">Start with a 3-month trial period</h2>
 			<p>
-				You pay for what you use, like hosting, compute resource and backing services such as a database.
+				When a team starts using GOV.UK PaaS, they get to try out the platform
+				for 3 months.
 			</p>
-			<p>The overall cost depends on factors such as the number of environments you deploy to, the size and number of your applications, the size of your database services, and whether they need to have high availability.</p>
+			<p>
+				During this period they can test the majority of the features,
+				including:
+			</p>
+			<ul class="list list-bullet">
+				<li>
+					managing user accounts
+				</li>
+				<li>
+					creating and managing environments
+				</li>
+				<li>
+					deploying and running apps
+				</li>
+				<li>
+					using trial-sized editions of our backing services
+				</li>
+			</ul>
+			<p>
+				The trial period is free of charge, but users are only allowed a capped
+				quota of resources, can’t set up custom domains and can’t run
+				production apps on the platform.
+			</p>
+			<p>
+				<a href="/signup">
+					Start your trial period
+				</a>
+			</p>
 
-			<p>If you have a specific service you wish to discuss costs for, please contact us at:  <a href="mailto:gov-uk-paas-support@digital.cabinet-office.gov.uk">gov-uk-paas-support@digital.cabinet-office.gov.uk</a></p>
+			<h2 class="heading-medium">Using the full-featured platform</h2>
+			<p>
+				You have up to 3 months to decide whether GOV.UK PaaS is for you. At
+				the end of the trial period, if you want to keep using the platform
+				we’ll ask you to sign a memorandum of understanding - you’ll get access
+				to the full set of features and we’ll start billing you. 
+			</p>
+			<p>
+				You will be charged monthly, based on the resources you use. Use our
+				calculator to
+				<a href="https://admin.cloud.service.gov.uk/calculator">
+					get an estimate of how much it would cost you to use GOV.UK PaaS</a>.
+				You don’t have to commit to a long-term contract and you can enable and
+				disable apps, databases and services as required.
+			</p>
+			<p>
+				If at the end of the trial period you decide that GOV.UK PaaS is not
+				the right solution for you, we will close your
+				<a href="https://docs.cloud.service.gov.uk/#organisations">organisation</a>
+				and all the user accounts associated to it.
+			</p>
 
+			<h2 class="heading-medium">How is GOV.UK PaaS priced</h2>
+			<p>
+				Our pricing model is designed to recover the costs of the raw resources
+				used on GOV.UK PaaS and the time our team spends on making these
+				available to you via GOV.UK PaaS.
+			</p>
+			<p>
+				When we bill you we will recharge the resources you effectively use. We
+				then apply a platform fee to some of these costs where we provision
+				infrastructure to ensure high-availability, fast application deployment
+				and scalability for the hosted service. The bill will list these costs
+				and show you where the fee has been applied.
+			</p>
+			<p>
+				The bill also includes a service fee to cover the internal overhead of
+				procuring, managing and making sure the platform complies with
+				information assurance standards.
+			</p>
 		</div>
 	</div>
 </div>
