--- a/views/index.erb
+++ b/views/index.erb
@@ -112,7 +112,8 @@
 						It offers 24-hour platform-level support
 					</li>
 					<li>
-						It’s possible to test an application on the free plan before moving to one of the paid plans
+						It’s possible to test an application in the
+						<a href="/pricing">trial period free of charge</a>
 					</li>
 					<li>
 						The technology runs on an IA-accredited infrastructure, so times for app accreditation are generally faster
