Removed "-2" from troubleshooting

--- a/views/get-started.erb
+++ b/views/get-started.erb
@@ -46,7 +46,7 @@
 
 			<h3 class="heading-medium">Support in trial mode</h3>
 			<p>
-				Check the documentation to <a href="https://docs.cloud.service.gov.uk/troubleshooting.html#troubleshooting-2">troubleshoot common problems</a>. If you can’t find a solution our team can help during office hours. Contact us through our <a href="/support">support page</a>.
+				Check the documentation to <a href="https://docs.cloud.service.gov.uk/troubleshooting.html#troubleshooting">troubleshoot common problems</a>. If you can’t find a solution our team can help during office hours. Contact us through our <a href="/support">support page</a>.
 			</p>
 
 			<h3 class="heading-medium">Increase your quota</h3>
